--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="https://www.netlify.com/">Тут сайт</a></li>
             <li><a href="https://github.com/slavaver/sapr-labs">Тут лабы</a></li>
         </ul>
+        <img src="no-way.jpg" alt="no ">
     </main>
 
     <footer>
