--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
         <h2>Помогите</h2>
     </header>
     <main>
-        <ul>
-            <li><a href="https://doka.guide">Тут гайды</a></li>
-            <li><a href="https://www.netlify.com/">Тут сайт</a></li>
-            <li><a href="https://github.com/slavaver/sapr-labs">Тут лабы</a></li>
-        </ul>
-        <img src="no-way.jpg" alt="no ">
+        <nav class="ссылки">
+            <ul>
+                <li><a href="https://doka.guide">Тут гайды</a></li>
+                <li><a href="https://www.netlify.com/">Тут сайт</a></li>
+                <li><a href="https://github.com/slavaver/sapr-labs">Тут лабы</a></li>
+            </ul>
+        </nav>
+
+        <img src="no-way.jpg" alt="no way">
     </main>
 
     <footer>
