--- a/index.html
+++ b/index.html
@@ -1,30 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Простые вещи из бумаги</title>
 </head>
 
 <body>
     <header>
-        <nav class="ссылки">
-            <ul>
-                <li><a href="https://doka.guide">Тут гайды</a></li>
-                <li><a href="https://www.netlify.com/">Тут сайт</a></li>
-                <li><a href="https://github.com/slavaver/sapr-labs">Тут лабы</a></li>
-            </ul>
-        </nav>
+        <a href="#">
+            <img src="#" alt="Логотип" />
+        </a>
+        <button><img src="#" alt="Модальное окно"></button>
+        <button><img src="#" alt="Поиск"></button>
+        <a href="#">Вход</a>
     </header>
     <main>
-        <h1>Проба пера</h1>
-        <h2>Помогите</h2>
-        <img src="no-way.jpg" alt="no way">
+        <h1>Main page on simple</h1>
+        <section>
+            <h2>Простые вещи. Из бумаги</h2>
+            <p>
+                Бума́га (предположительно от итал. bombagia, первоисточником же
+                считается иранский) — волокнистый материал c минеральными добавками.
+            </p>
+            <a href="#">Каталог</a>
+        </section>
+        <section>
+            <h2>Максимальная белизна</h2>
+            <p>Для повышения белизны, гладкости и мягкости в состав бумажной массы вводят белые минеральные вещества:
+                мел, тальк, каолин и др. Эта операция называется наполнением.</p>
+            <p>Отлив бумажного листа осуществляют на бумагоделательной машине, важнейшей частью которой является
+                непрерывно движущаяся (как транспортер) металлическая или капроновая сетка.</p>
+            <div>
+                <h3>V1</h3>
+                <img src="#" alt="v1" />
+                <p>Результат вашего обучения</p>
+            </div>
+            <div>
+                <h3>V2</h3>
+                <img src="#" alt="v2" />
+                <p>Результат вашего обучения</p>
+            </div>
+            <div>
+                <h3>V3</h3>
+                <img src="#" alt="v3" />
+                <p>Результат вашего обучения</p>
+            </div>
+            <img src="#" alt="paper" />
+        </section>
+        <section>
+            <h2>Catalog</h2>
+            <div>
+                <h3>Упаковка</h3>
+                <p>Тираж: от 50 штук</p>
+                <img src="#" alt="Упаковка">
+                <p>Сделано из крафт-бумаги или плотного картона. Упаковки имеют различные формы и расцветки, изготовим
+                    форму под заказ.</p>
+                <a href="#">Подробнее</a>
+                <img src="#" alt="Стрелка">
+            </div>
+            <div>
+                <h3>Пакеты</h3>
+                <p>Тираж: от 200 штук</p>
+                <img src="#" alt="Пакеты">
+                <p>С прямоугольным дном. От 10 см до 60 см по высоте. Материалы: картон, крафт-бумага. Различные
+                    расцветки и дизайн.</p>
+                <a href="#">Подробнее</a>
+                <img src="#" alt="Стрелка">
+            </div>
+            <div>
+                <h3>Кейсы</h3>
+                <p>Тираж: от 30 штук</p>
+                <img src="#" alt="Кейсы">
+                <p>Подойдет для документов и других бумаг. Различные расцветки, размеры и плотность. Материал:
+                    прессованная бумага.</p>
+                <a href="#">Подробнее</a>
+                <img src="#" alt="Стрелка">
+            </div>
+            <div>
+                <h3>Другие изделия</h3>
+                <p>Тираж: от 100 штук</p>
+                <img src="#" alt="Упаковка">
+                <p>Нестандартные упаковки, кейсы и другие изделия различных размеров и конфигураций. Изготовим в
+                    кратчайшие сроки.</p>
+                <a href="#">Подробнее</a>
+                <img src="#" alt="Стрелка">
+            </div>
+        </section>
+        <section>
+            <h2>Brands</h2>
+            <ul>
+                <li><img src="#" alt="Hahnemuhle"></li>
+                <li><img src="#" alt="Canson"></li>
+                <li><img src="#" alt="Royal Talens"></li>
+                <li><img src="#" alt="Fabriano"></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Simple скетчбук</h2>
+            <img src="#" alt="Скетчбук">
+            <p>80 листов, твердая обложка, бумага Fabriano 200 г/м2. Подойдет и для графики и для акварели. Для самых
+                смелых творческих замыслов!</p>
+            <a href="#">Купить</a>
+        </section>
     </main>
-
     <footer>
-        <p>2023</p>
+        <img src="#" alt="Логотип">
+        <ul>
+            <li><a href="#"><img src="#" alt="Facebook"></a></li>
+            <li><a href="#"><img src="#" alt="Twitter"></a></li>
+            <li><a href="#"><img src="#" alt="Instagram"></a></li>
+            <li><a href="#"><img src="#" alt="YouTube"></a></li>
+        </ul>
+        <p>SIMPLE <img src="#" alt="®"> 2023</p>
     </footer>
 </body>
 
