fixed copyright sign

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <a href="#"><img src="images/YouTube.svg" alt="YouTube" /></a>
             </li>
         </ul>
-        <p>SIMPLE <img src="#" alt="®" /> 2023</p>
+        <p>SIMPLE <img src="images/copyright.svg" alt="®" width=12px height=12px/> 2023</p>
     </footer>
 </body>
 
